--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "php"               : ">=5.5.0",
         "illuminate/support": "5.4.*",
+        "nesbot/carbon"     : "^1.20",
         "guzzlehttp/guzzle" : "6.3.*"
     },
 
